style.css
*{
    box-sizing: border-box;
}
body{
    margin: 0;
    padding: 0;
    background: #1c2431;
}
img{
    max-width: 100%;
}
.text{
    font-family: "Open Sans", sans-serif;
}
.title{
    font-family: "Raleway", sans-serif;

}
.container{
    width: 90%;
    max-width: 900px;
    margin: 0 auto;
}
.nav--bar{
    display: flex;
    justify-content: space-between;
}
.nav--bar img{

width: 35%;
max-width: 70px;    
}
.nav--list{
    color: white;
    margin: 0;
    padding: 0;
    list-style-type: none;
    display: flex;
    align-self: center;
    /* width: 50%; */
    justify-content: space-between;
}
.nav--list li{
    font-size: 0.8rem;
    margin: 1em  1em;
}
.illustrate{
    display: flex;
    justify-content: center;
    margin-top: 2em;
}
.illustrate img{
    width: 90%;
    max-width: 500px;
    margin: 0 auto;
    /* align-self: center; */
}
.first--content{
    color: white;
    max-width: 650px;
    display: flex;
    flex-direction: column;
    align-items: center;
    /* margin: 1.5em 1em; */
    margin: 0 auto;
}
.first--header , .first--text ,.second--title, .second--text,.third--title,.third--text{
    text-align: center;
}
.first--text{
    font-size: 0.8em;
}
 button{
    width: 75%;
    max-width: 250px;
    padding: 0.75em;
    border-radius: 20px;
    border: none;
    color: white;
    background-color: #339ecc;
    font-weight: 600;
    font-family: "Open Sans", sans-serif;
    margin-top: 1em;
    margin-bottom: 0.5em;
}
input{
    width: 75%;
    padding: 0.75em;
    border-radius: 20px;
    border: none;
    /* color: white; */
    /* background-color: #339ecc; */
    font-weight: 600;
    font-family: "Open Sans", sans-serif;
}
.section--second{
   display: flex;     
   flex-direction: column;
   max-width: 750px;
   /* border: 1px solid white; */
   margin: 0 auto;
}
.second--container{
    display: flex;
    flex-direction: column;
    align-items: center;
    color: white;
    max-width: 300px;
    margin-bottom: 1em;
    margin-top: 1em;
    /* margin: 1em 1em; */
}
.second--text ,.third--text{
    font-size: 0.8em;
    text-align: left;
    width: 95%;
    margin: 0 auto;
}
.third--container{
    color: white;
}
.third--container a{
    /* text-decoration: none; */
    text-underline-offset: 0.5em;
    color: #65e2d9;
    font-size: 0.7em;
}

.fourth--container{
    background: #202a3c;
    width: 90%;
    max-width: 300px;
    margin: 0 auto;
    color: white;
    padding: 1.4em;
    margin-top: 1em;
    margin-bottom: 1em;
}
.info{
    /* border: 1px solid white; */
    display: flex;
}
.info img{
    width: 20%;
    border-radius: 100%;
}
.details{
    /* border: 1px solid white; */
    /* height: 50%; */
    display: flex;
    flex-direction: column;
    margin-left: 0.8em;
}
.user ,.user--text{
    margin: 0;
    /* border: 1px solid red; */
}
.user--text{
    font-size: 0.7rem;
}
.form--div{
    background-color: #202a3c;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 600px;
}
.section--footer{
    color: white;
}
.img--text{
    display: flex;
    align-items: center;
}
.txt{
    
    width: 85%;
    max-width: 250px;
    /* margin-left: 1em; */
}
.icons{
    width: 10%;
}
.footer--list{
    list-style-type: none;
    margin: 0;
    padding: 0;
    margin-bottom: 1em;
}
@media (min-width : 800px){
    
    .text{
        font-size: 1em;
        text-align: center;
    }
    .nav--list li{
        
    }
    .first--content{
       
        /* align-self: center; */
    }
    .section--second{
        flex-direction: row;
        flex-wrap: wrap;   
    }
    .third--container{
        display: flex;
    }
    .image{
        /* border: 1px solid red; */
        width: 100%;
    }
    .col{
        display: flex;
        flex-direction: column;
        justify-content: center;
        /* border: 1px solid red; */
        /* align-items: center; */
    }
    .section--fourth{
        display: flex;
        /* flex-wrap: wrap; */
        max-width: 1000px;
        margin: 0 auto;
        /* border: 1px solid red; */
    }
    .footer-container{
    display: flex;
    flex-wrap: wrap;
    /* border: 1px solid red; */
    justify-content: space-between;
    }
    .column{
    display: block;
    }
}

